<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_image_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="11dp"
                android:layout_marginBottom="10dp"
                tools:srcCompat="@tools:sample/avatars"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/content_image_item" />

            <TextView
                android:id="@+id/item_txt_name"
                style="@style/TextStyle8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14.5dp"
                android:layout_marginTop="14dp"
                android:text="@string/content_txt_name"
                app:layout_constraintStart_toEndOf="@id/item_image_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_txt_type"
                style="@style/TextStyle6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.5dp"
                android:text="@string/content_txt_type"
                app:layout_constraintStart_toStartOf="@id/item_txt_name"
                app:layout_constraintTop_toBottomOf="@id/item_txt_name" />

            <TextView
                android:id="@+id/item_txt_country"
                style="@style/TextStyle7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1.5dp"
                android:text="@string/content_txt_country"
                app:layout_constraintStart_toStartOf="@id/item_txt_type"
                app:layout_constraintTop_toBottomOf="@id/item_txt_type" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>