<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".mvp.login.view.LoginActivity">

    <ImageView
        android:id="@+id/login_imv_log"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="40.5dp"
        app:srcCompat="@drawable/logo_home"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="121dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_image_logo" />

    <TextView
        android:id="@+id/login_txt_welcome"
        style="@style/TextStyle3"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48.5dp"
        android:text="@string/content_txt_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_imv_log" />

    <TextView
        android:id="@+id/login_txt_description"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.5dp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textColor="@color/charcoal_grey"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="3.5sp"
        android:gravity="center_horizontal"
        android:text="@string/content_login_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_txt_welcome"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="45dp"
        android:selectAllOnFocus="true"
        app:boxBackgroundColor="@color/beige"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_txt_description"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/medium_pink">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/content_txt_email"
            android:inputType="textEmailAddress"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"

        app:boxBackgroundColor="@color/beige"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_et_email"
        app:startIconDrawable="@drawable/ic_lock_open"
        app:startIconTint="@color/medium_pink">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/content_txt_password"
            android:inputType="textPassword"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_bt_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:text="@string/content_button_enter"
        android:textAppearance="@style/TextStyle4"
        android:theme="@style/Theme.DesafioIOasys.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_et_password" />

    <include
        layout="@layout/view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>